--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 											<div class="price">
 											<img src="img/heart.png">
 											<p> 15.90 $ </p>
-											<img src="img/car2.png">
+											<img src="img/Car2.png">
 											</div>
 									</div>
 								</article>
@@ -272,7 +272,7 @@
 											<div class="price">
 											<img src="img/heart.png">
 											<p> 15.90 $ </p>
-											<img src="img/car2.png">
+											<img src="img/Car2.png">
 											</div>
 									</div>
 								</article>
@@ -288,7 +288,7 @@
 											<div class="price">
 											<img src="img/heart.png">
 											<p> 15.90 $ </p>
-											<img src="img/car2.png">
+											<img src="img/Car2.png">
 											</div>
 									</div>
 								</article>
@@ -304,7 +304,7 @@
 											<div class="price">
 											<img src="img/heart.png">
 											<p> 15.90 $ </p>
-											<img src="img/car2.png">
+											<img src="img/Car2.png">
 											</div>
 									</div>
 								</article>
@@ -320,7 +320,7 @@
 											<div class="price">
 											<img src="img/heart.png">
 											<p> 15.90 $ </p>
-											<img src="img/car2.png">
+											<img src="img/Car2.png">
 											</div>
 									</div>
 								</article>	
