--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
 								<article class="style1B">
 									<span class="imageB">
-										<img src="img/bra_1.png" alt="" />
+										<img src="img/Bra_1.png" alt="" />
 									</span>
 									<div class="contentB">
 											<h2>VENUS</h2>
@@ -246,7 +246,7 @@
 								</article>
 								<article class="style1B">
 									<span class="imageB">
-										<img src="img/bra_2.png" alt="" />
+										<img src="img/Bra_2.png" alt="" />
 									</span>
 									<div class="contentB">
 											<h2>MARTES</h2>
@@ -262,7 +262,7 @@
 								</article>
 								<article class="style1B">
 									<span class="imageB">
-										<img src="img/bra_3.png" alt="" />
+										<img src="img/Bra_3.png" alt="" />
 									</span>
 									<div class="contentB">
 											<h2>JUPITER</h2>
@@ -278,7 +278,7 @@
 								</article>
 								<article class="style1B">
 									<span class="imageB">
-										<img src="img/bra_4.png" alt="" />
+										<img src="img/Bra_4.png" alt="" />
 									</span>
 									<div class="contentB">
 											<h2>PEGASUS</h2>
@@ -294,7 +294,7 @@
 								</article>
 								<article class="style1B">
 									<span class="imageB">
-										<img src="img/bra_5.png" alt="" />
+										<img src="img/Bra_5.png" alt="" />
 									</span>
 									<div class="contentB">
 											<h2>POLAR</h2>
@@ -310,7 +310,7 @@
 								</article>
 								<article class="style1B">
 									<span class="imageB">
-										<img src="img/bra_6.png" alt="" />
+										<img src="img/Bra_6.png" alt="" />
 									</span>
 									<div class="contentB">
 											<h2>ORION</h2>
